# asteroids

./: README.md  asteroids.cabal  client.sh  my-project.cabal  server.sh  single-game.sh  stack.yaml
app/: Main.hs
client/: Main.hs
server/: Main.hs
server/Asteroids/: Server.hs
src/: .Asteroids.hs.swo  AI.hs  Asteroids.hs  Bonuses.hs  Config.hs  Fisics.hs  Game.hs  Images.hs  Items.hs  Lib.hs  Models.hs  Spaceship.hs  Universe.hs
src/AI/: Models.hs  Strategy.hs
src/AI/Strategy/: Attack.hs  Avoidance.hs  Bonus.hs  Calculations.hs  Config.hs
