name:                asteroids
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              "Начнем в мае"
maintainer:          author@email.com
copyright:           2017 "Начнем в мае"
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     Asteroids
  build-depends:       base >= 4.7 && < 5, random, gloss, gloss-juicy
  default-language:    Haskell2010

executable asteroids
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , asteroids
  default-language:    Haskell2010

test-suite asteroids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , asteroids
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

