name:                asteroids
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              "Начнем в мае"
maintainer:          author@email.com
copyright:           2017 "Начнем в мае"
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules: Game 
                   Asteroids 
                   Images 
                   Config 
                   Items 
                   Spaceship 
                   Universe 
                   Fisics 
                   Models 
                   AI 
                   AI.Models
                   AI.Strategy
                   AI.Strategy.Calculations
                   AI.Strategy.Avoidance
                   AI.Strategy.Attack  
  build-depends:       base >= 4.7 && < 5, random, gloss, gloss-juicy
                     , bytestring
                     , binary
                     , websockets
  default-language:    Haskell2010

executable asteroids
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , asteroids
  default-language:    Haskell2010

executable asteroids-client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, gloss-juicy
                     , random
                     , asteroids
                     , gloss
                     , stm
                     , websockets
  default-language:    Haskell2010

executable asteroids-server
  hs-source-dirs:      server
  main-is:             Main.hs
  other-modules:
    Asteroids.Server
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , http-types
                     , MonadRandom
                     , servant
                     , servant-server
                     , asteroids
                     , stm
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
  default-language:    Haskell2010

test-suite asteroids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , asteroids
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

